--- a/alakzatok.html
+++ b/alakzatok.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="hu">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alakzatok</title>
 </head>
+
 <body>
-    
+    <ul>
+        <li><a href="alapok.html">Alapok</a></li>
+        <li><a href="letoltes.html">Letöltés</a></li>
+        <li><a href="main.html">Főoldal</a></li>
+        <li><a href="szinek.html">Színek</a></li>
+    </ul>
 </body>
+
 </html>
