--- a/main.html
+++ b/main.html
@@ -5,6 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pygame - 1. fejezet</title>
+    <style>
+        body {
+  background-image: url(képek/mintapyv2.PNG); opacity: 0.2;
+  background-size: auto;
+  background-position-x: center;
+}
+    </style>
+
 </head>
 
 <body>
@@ -14,6 +22,8 @@
         <li><a href="letoltes.html">Letöltés</a></li>
         <li><a href="szinek.html">Színek</a></li>
     </ul>
+
+    <p> asd</p>
 </body>
 
 </html>
