--- a/alapok.html
+++ b/alapok.html
@@ -5,14 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alapok</title>
+    <link rel="stylesheet" href="navbar.css">
 </head>
 
 <body>
-    <ul>
-        <li><a href="alakzatok.html">Alakzatok</a></li>
-        <li><a href="letoltes.html">Letöltés</a></li>
+    <ul class="navbar">
         <li><a href="main.html">Főoldal</a></li>
+        <li><a href="letoltes.html">Letöltés</a></li>
+        <li><a href="alapok.html">Alapok</a></li>
         <li><a href="szinek.html">Színek</a></li>
+        <li><a href="alakzatok.html">Alakzatok</a></li>
     </ul>
 </body>
 
