--- a/alapok.html
+++ b/alapok.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alapok</title>
     <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="index.css">
+    <style>
+        body {
+  background-image: url(képek/alapok.PNG); 
+}
+    </style>
 </head>
 
 <body>
