--- a/main.html
+++ b/main.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pygame - 1. fejezet</title>
-    <style>
-        body {
-  background-image: url(képek/mintapyv2.PNG); opacity: 0.2;
-  background-size: auto;
-  background-position-x: center;
-}
-    </style>
+    
 
     <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="index.css">
+    <style>
+        body {
+  background-image: url(képek/mintapyv2.PNG); 
+}
+    </style>
 </head>
 
 <body>
