--- a/szinek.html
+++ b/szinek.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Színek</title>
     <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="index.css">
+    <style>
+        body {
+  background-image: url(képek/szinek.PNG);
+}
+    </style>
 </head>
 
 <body>
