navbar es hatter pronlema megoldva

--- a/main.html
+++ b/main.html
@@ -7,9 +7,9 @@
     <title>Pygame - 1. fejezet</title>
     <style>
         body {
-  background-image: url(képek/mintapyv2.PNG); opacity: 0.2;
-  background-size: auto;
-  background-position-x: center;
+            background-image: url(képek/mintapyv2.PNG); 
+            background-size: auto;
+            background-position-x: center;
 }
     </style>
 
