main.html szövege

--- a/main.html
+++ b/main.html
@@ -26,8 +26,23 @@
         <li><a href="szinek.html">Színek</a></li>
         <li><a href="alakzatok.html">Alakzatok</a></li>
     </ul>
-
-    <p> asd</p>
+    <h2>1 - Hány darab python verzió van a számítógépan?</h2>
+        <p>
+            Gépház --> Alkalmazások --> Keresés --> Python
+        </p>
+        <img src="képek/Python.PNG" alt="Python">
+        <p></p>
+    <h2>2.a - Pygame letöltése egy python verzió esetén</h2>
+        <p>1. Parancssor futtatása rendszergazdaként</p>
+        <p>2. Az alábbi sor bemásolása és futtatása</p>
+        <p>py -m pip install -U pygame --user</p>
+        <h2>2.b - Pygame letöltése több python verzió esetén</h2>
+        <p>Az alábbi linken minden szükséges információt megtalál: </p>
+        <p>https://www.youtube.com/watch?v=RHQfonGJ3A4&list=PL682eZbSNpGes-31kuQjY01bnKsCI4vDO&index=3&ab_channel=suliPY</p>
+    <h2>3. Pygame működésének lellenörzése</h2>
+        <p>Nyiss bármilyen alkalmazást, amelyet programozásra használsz. Improtáld be a pygame modult (import pygame). Futtasd a programot.</p>
+        <p>Ha megkapod azt a sort hogy: Hello from the pygame community. https://www.pygame.org/contribute.html akkor jól dolgoztál.</p>
+    
 </body>
 
 </html>
