--- a/main.html
+++ b/main.html
@@ -27,7 +27,26 @@
         <li><a href="alakzatok.html">Alakzatok</a></li>
     </ul>
 
-    <p> asd</p>
+    <div id="container">
+        <div class="card">
+            <img src="képek/" alt="Letöltés">
+            <p>Letöltés</p>
+        </div>
+        <div class="card">
+            <img src="" alt="Alapok">
+            <p>Alapok</p>
+        </div>
+        <div class="card">
+            <img src="" alt="Színek">
+            <p>Színek</p>
+        </div>
+        <div class="card">
+            <img src="" alt="Alakzatok">
+            <p>Alakzatok</p>
+        </div>
+    </div>
+
+    
 </body>
 
 </html>
