--- a/main.html
+++ b/main.html
@@ -29,19 +29,19 @@
 
     <div id="container">
         <div class="card">
-            <img src="képek/" alt="Letöltés">
+            <img src="képek/letöltés cmd.png" alt="Letöltés">
             <p>Letöltés</p>
         </div>
         <div class="card">
-            <img src="" alt="Alapok">
+            <img src="képek/alapok.PNG" alt="Alapok">
             <p>Alapok</p>
         </div>
         <div class="card">
-            <img src="" alt="Színek">
+            <img src="képek/szinek.PNG" alt="Színek">
             <p>Színek</p>
         </div>
         <div class="card">
-            <img src="" alt="Alakzatok">
+            <img src="képek/alakzatok.PNG" alt="Alakzatok">
             <p>Alakzatok</p>
         </div>
     </div>
