alapok.html szövege

--- a/letoltes.html
+++ b/letoltes.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Letöltés</title>
     <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="index.css">
+    <style>
+        body {
+            background-image: url(képek/mintapyv2.PNG); 
+            background-size: auto;
+            background-position-x: center;
+}
+    </style>
 </head>
 
 <body>
