--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
         <li><a href="szinek.html">Színek</a></li>
         <li><a href="alakzatok.html">Alakzatok</a></li>
     </ul>
-    
+    <h1>Pygame</h1>
 </body>
 
 </html>
