--- a/alapok.html
+++ b/alapok.html
@@ -26,7 +26,7 @@
     
     <p>Mindenek előtt be kell importálni a pygame modult.</p>
     <p>import pygame</p>
-    <img src="képek/alapok_képek/Python.PNG" alt="Pygame importálása">
+    <img src="képek/alapok_képek/import.PNG" alt="Pygame importálása">
     
     <p>Meg kell hívnunk az init függvényt - mindig egy kötelező elem</p>
     <p>pygame.init()</p>
