--- a/alapok.html
+++ b/alapok.html
@@ -38,7 +38,7 @@
     <img src="képek/alapok_képek/játékablak létrehozása.PNG" alt="játékablak">
     
     <p>Módosíthatjuk az ablak címet:</p>
-    <p>pygame.display.set_caption('')<p>
+    <p>pygame.display.set_caption('')</p>
     <img src="képek/alapok_képek/ablak_cime.PNG" alt="Ablak címének változtatása">
     <img src="képek/alapok_képek/ablak_cime_fut.PNG" alt="Ablak címe">
 
