alakzatok.html szöveg kész

--- a/alakzatok.html
+++ b/alakzatok.html
@@ -22,6 +22,28 @@
         <li><a href="szinek.html">Színek</a></li>
         <li><a href="alakzatok.html">Alakzatok</a></li>
     </ul>
+    <div>
+        <h1>Alakzatok</h1>
+        <p>Hasznos oldal, ahol megtalálhatsz minden szükséges információt alakzatok rajzolásáról a "draw" menüpontra kattintva</p>
+        <p><a href="https://www.pygame.org/docs/">pygame.org/docs</a></p>
+        <p>Pár gyakori alakzat rajzolása:</p>
+
+        <p>1. kör - pygame.draw.circle()</p>
+        <p>Kötelező paraméterei: (felület, szín, (középpontjának_koordinátái), kör_sugara)</p>
+        <img src="képek/alakzatok_képek/kör.png" alt="Kör rajzolása">
+
+        <p>2. négyszögek - pygame.draw.rect()</p>
+        <p>Kötelező paraméterei: (felület, szín, (pozíciója és mérete))</p>
+        <img src="képek/alakzatok_képek/négyszögek.png" alt="Négyszögek rajzolása">
+
+        <p>3. elipszis -  pygame.draw.ellipse()</p>
+        <p>Kötelező paraméterei: (felület, szín, (pozíciója és mérete))</p>
+        <img src="képek/alakzatok_képek/elipszis.png" alt="Elipszis rajzolása">
+
+        <p>4. sokszögek - pygame.draw.polygon()</p>
+        <p>Kötelező paraméterei: (felület, szín, [(csúcsok_koordinátája), (), ()])</p>
+        <img src="képek/alakzatok_képek/sokszögek.png" alt="Sokszögek rajzolása">
+    </div>
 </body>
 
 </html>
