--- a/alapok.html
+++ b/alapok.html
@@ -7,6 +7,7 @@
     <title>Alapok</title>
     <link rel="stylesheet" href="navbar.css">
     <link rel="stylesheet" href="alapok.css">
+    <link rel="stylesheet" href="index.css">
     <style>
         body {
     background-image: url(képek/alapok.PNG); 
