--- a/szinek.html
+++ b/szinek.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Színek</title>
     <link rel="stylesheet" href="navbar.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="szinek.css">
     <style>
         body {
             background-image: url(képek/szinek.PNG);
