Főoldal bemutatás nélül

--- a/main.html
+++ b/main.html
@@ -26,6 +26,25 @@
         <li><a href="szinek.html">Színek</a></li>
         <li><a href="alakzatok.html">Alakzatok</a></li>
     </ul>
+    <div>
+        <h1>Főoldal</h1>
+        <p>
+        Ezen az oldalon bemuatjuk a Pygame alapjait, bővebben a <a href="letoltes.html">letöltését</a>, 
+        az elinduláshoz az <a href="alapok.html">alap lépéseket</a>, <a href="szinek.html">színek kezelését</a> 
+        és az <a href="alakzatok.html">alakzatok rajzolását<a>.
+        </p>
+
+        <p>
+        Rövid leírás a csapatunkról:
+
+        Horváth Máté, a CsK
+
+        Konkolyi Ármin
+
+        Borisza Benedek
+        </p>
+    </div>
+
 </body>
 
 </html>
