rövid leírás csapatunkrol

--- a/main.html
+++ b/main.html
@@ -31,17 +31,24 @@
         <p>
         Ezen az oldalon bemuatjuk a Pygame alapjait, bővebben a <a href="letoltes.html">letöltését</a>, 
         az elinduláshoz az <a href="alapok.html">alap lépéseket</a>, <a href="szinek.html">színek kezelését</a> 
-        és az <a href="alakzatok.html">alakzatok rajzolását<a>.
+        és az <a href="alakzatok.html">alakzatok rajzolását</a>.
         </p>
 
         <p>
         Rövid leírás a csapatunkról:
 
-        Horváth Máté, a CsK
+        Horváth Máté, a Csapat Vezetője:
+        - Szöveg elkészítése
+        - Példákhoz kód megírása 
+        - Csapat ösztökélése
 
-        Konkolyi Ármin
+        Konkolyi Ármin:
+        - CSS készítése
+        - Példákhoz kód megírása
 
-        Borisza Benedek
+        Borisza Benedek:
+        - CSS készítése
+        - Szöveg elkészítése
         </p>
     </div>
 
