--- a/main.html
+++ b/main.html
@@ -34,21 +34,29 @@
         és az <a href="alakzatok.html">alakzatok rajzolását</a>.
         </p>
 
+       
+        <h2>Rólunk</h2>
         <p>
-        Rövid leírás a csapatunkról:
-
         Horváth Máté, a Csapat Vezetője:
-        - Szöveg elkészítése
-        - Példákhoz kód megírása 
-        - Csapat ösztökélése
-
+        <ul>
+            <li>- Szöveg elkészítése</li>
+            <li>- Példákhoz kód megírása</li>
+            <li>- Csapat ösztökélése</li>
+        </ul>
+        </p>
+        <p>
         Konkolyi Ármin:
-        - CSS készítése
-        - Példákhoz kód megírása
-
+            <ul>
+                <li>- CSS készítése</li>
+                <li>- Példákhoz kód megírása</li>
+            </ul>
+        </p>
+        <p>
         Borisza Benedek:
-        - CSS készítése
-        - Szöveg elkészítése
+            <ul>
+                <li>- CSS készítése</li>
+                <li>- Szöveg elkészítése</li>
+            </ul>
         </p>
     </div>
 
