--- a/alapok.html
+++ b/alapok.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="navbar.css">
     <link rel="stylesheet" href="alapok.css">
     <link rel="stylesheet" href="index.css">
+    <link rel="icon" type="image/x-icon" href="képek/favicon.png">
     <style>
         body {
     background-image: url(képek/alapok.PNG); 
