--- a/letoltes.html
+++ b/letoltes.html
@@ -7,11 +7,11 @@
     <title>Letöltés</title>
     <link rel="stylesheet" href="navbar.css">
     <link rel="stylesheet" href="letoltes.css">
+    <link rel="icon" type="image/x-icon" href="képek/favicon.png">
     <style>
         body {
             background-image: url(képek/mintapyv2.PNG); 
-            background-size: auto;
-            background-position-x: center;
+            
 }
     </style>
 </head>
@@ -29,7 +29,7 @@
         <p>
             Gépház --> Alkalmazások --> Keresés --> Python
         </p>
-        <img src="képek/Python.PNG" alt="Python">
+        <img src="képek/gephaz_python.png" alt="Python">
         <p></p>
     
         <h2>2.a - Pygame letöltése egy python verzió esetén</h2>
