--- a/szinek.html
+++ b/szinek.html
@@ -7,6 +7,7 @@
     <title>Színek</title>
     <link rel="stylesheet" href="navbar.css">
     <link rel="stylesheet" href="szinek.css">
+    <link rel="icon" type="image/x-icon" href="képek/favicon.png">
     <style>
         body {
             background-image: url(képek/szinek.PNG);
