--- a/main.html
+++ b/main.html
@@ -36,7 +36,7 @@
         <div id="kartyak">
             <div class="row justify-content-center">
                 <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-                    <div class="card">
+                    <div class="card text-white bg-secondary">
                         <img class="card-img-top" src="képek/mintapy.PNG" alt="Card image cap">
                         <div class="card-body">
                             <a href="letoltes.html" class="btn btn-primary">Letöltés</a>
@@ -44,7 +44,7 @@
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-                    <div class="card">
+                    <div class="card text-white bg-secondary">
                         <img class="card-img-top" src="képek/alapok.PNG" alt="Card image cap">
                         <div class="card-body">
                             <a href="alapok.html" class="btn btn-primary">Alapok</a>
@@ -52,7 +52,7 @@
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-                    <div class="card">
+                    <div class="card text-white bg-secondary">
                         <img class="card-img-top" src="képek/szinek.PNG" alt="Card image cap">
                         <div class="card-body">
                             <a href="szinek.html" class="btn btn-primary">Színek</a>
@@ -60,7 +60,7 @@
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
-                    <div class="card">
+                    <div class="card text-white bg-secondary">
                         <img class="card-img-top" src="képek/alakzatok.PNG" alt="Card image cap">
                         <div class="card-body">
                             <a href="alakzatok.html" class="btn btn-primary">Alakzatok</a>
@@ -74,7 +74,7 @@
         <div id="szoveg">
             <h1><b>Rólunk</b></h1>
             <p>
-            <h4>Horváth Máté</h4>
+            <h4><i>Horváth Máté</i></h4>
             <ul>
                 <li>- Csapat Vezetője</li>
                 <li>- Szöveg elkészítése</li>
@@ -83,14 +83,14 @@
             </ul>
             </p>
             <p>
-            <h4>Konkolyi Ármin</h4>
+            <h4><i>Konkolyi Ármin</i></h4>
             <ul>
                 <li>- CSS készítése</li>
                 <li>- Példákhoz kód megírása</li>
             </ul>
             </p>
             <p>
-            <h4>Borisza Benedek</h4>
+            <h4><i>Borisza Benedek</i></h4>
             <ul>
                 <li>- CSS készítése</li>
                 <li>- Szöveg elkészítése</li>
