--- a/main.html
+++ b/main.html
@@ -7,10 +7,10 @@
     <title>Pygame - 1. fejezet</title>
 
 
-    <link rel="stylesheet" href="navbar.css">
-    <link rel="stylesheet" href="index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="képek/favicon.png">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="navbar.css">
 
     <style>
         body {
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <ul class="navbar">
+    <ul class="navbarrrr">
         <li><a href="main.html">Főoldal</a></li>
         <li><a href="letoltes.html">Letöltés</a></li>
         <li><a href="alapok.html">Alapok</a></li>
