--- a/szinek.html
+++ b/szinek.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <ul class="navbar">
+    <ul class="navbarrrr">
         <li><a href="main.html">Főoldal</a></li>
         <li><a href="letoltes.html">Letöltés</a></li>
         <li><a href="alapok.html">Alapok</a></li>
