--- a/alakzatok.html
+++ b/alakzatok.html
@@ -17,7 +17,7 @@
 
 <body>
     <ul class="navbarrrr">
-        <li><a href="main.html">Főoldal</a></li>
+        <li><a href="index.css">Főoldal</a></li>
         <li><a href="letoltes.html">Letöltés</a></li>
         <li><a href="alapok.html">Alapok</a></li>
         <li><a href="szinek.html">Színek</a></li>
